add capi, update build.yml

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -140,6 +140,9 @@ else()
   endif()
   if(CMAKE_SYSTEM_NAME MATCHES Darwin)
   set(CMAKE_OSX_DEPLOYMENT_TARGET "12.0")
+  # Disable ASM language detection on macOS to avoid CMake ASM compiler errors
+  set(CMAKE_ASM_COMPILER_FORCED TRUE)
+  set(CMAKE_ASM_COMPILER "")
   add_compile_options(-Wno-deprecated-declarations)
   add_compile_options(-Wno-expansion-to-defined)
   add_compile_options(-Wno-inconsistent-missing-override)
