--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -88,8 +88,7 @@ jobs:
           -DCMAKE_OSX_ARCHITECTURES=x86_64 \
           -DCMAKE_C_COMPILER=/usr/bin/clang \
           -DCMAKE_CXX_COMPILER=/usr/bin/clang++ \
-          -DCMAKE_ASM_COMPILER=/usr/bin/clang \
-          -DCMAKE_ASM_FLAGS="-x assembler-with-cpp"
+          -DCMAKE_DISABLE_FIND_PACKAGE_ASM=TRUE
 
     - name: Configure CMake (macOS arm64)
       if: matrix.os == 'macOS' && matrix.arch == 'arm64'
@@ -98,8 +97,7 @@ jobs:
           -DCMAKE_OSX_ARCHITECTURES=arm64 \
           -DCMAKE_C_COMPILER=/usr/bin/clang \
           -DCMAKE_CXX_COMPILER=/usr/bin/clang++ \
-          -DCMAKE_ASM_COMPILER=/usr/bin/clang \
-          -DCMAKE_ASM_FLAGS="-x assembler-with-cpp"
+          -DCMAKE_DISABLE_FIND_PACKAGE_ASM=TRUE
 
     - name: Build (Windows/Linux)
       if: matrix.os != 'macOS'
