fix(SRichEdit): restore font and text color after painting
- Save and restore font and text color in SRichEdit::OnPaint
- Update demo and fun_test directories in CMakeLists.txt
- Update swinx subproject commit

--- a/demos/CMakeLists.txt
+++ b/demos/CMakeLists.txt
@@ -1,7 +1,7 @@
 add_subdirectory(demo2)
 if(NOT MINGW)
 add_subdirectory(demo)
-#add_subdirectory(fun_test)
+add_subdirectory(fun_test)
 add_subdirectory(wxDemo)
 if (TARGET httpclient)
 add_subdirectory(wallpaper)
