--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,7 +27,7 @@ jobs:
             dist: ubuntu-latest
           - os: Linux
             arch: arm64
-            dist: ubuntu-24.04-arm64
+            dist: ubuntu-22.04-arm
           - os: Windows
             arch: x86
             platform: Win32
@@ -68,17 +68,21 @@ jobs:
         brew update
         brew install cmake ninja pkgconf glfw3 glew
 
-    - name: Configure CMake (Linux)
-      if: matrix.os == 'Linux' && matrix.platform == ''
+    - name: Configure CMake (Linux x64)
+      if: matrix.os == 'Linux' && matrix.arch == 'x64'
+      run: cmake -B build -DCMAKE_BUILD_TYPE=${{ env.BUILD_TYPE }}
+
+    - name: Configure CMake (Linux arm64)
+      if: matrix.os == 'Linux' && matrix.arch == 'arm64'
       run: cmake -B build -DCMAKE_BUILD_TYPE=${{ env.BUILD_TYPE }} \
-            -DCMAKE_ASM_FLAGS="-x assembler-with-cpp"
+            -DPNG_HARDWARE_OPTIMIZATIONS=OFF
 
     - name: Configure CMake (Windows)
       if: matrix.os == 'Windows' && matrix.platform == ''
       run: cmake -B build -DCMAKE_BUILD_TYPE=${{ env.BUILD_TYPE }}
 
-    - name: Configure CMake (Win32, WOA)
-      if: matrix.os == 'Windows' && matrix.platform != ''
+    - name: Configure CMake (Win32)
+      if: matrix.os == 'Windows' && matrix.platform == 'Win32'
       run: cmake -B build -DCMAKE_BUILD_TYPE=${{ env.BUILD_TYPE }} -A ${{ matrix.platform }}
 
     - name: Configure CMake (macOS x64)
@@ -97,7 +101,7 @@ jobs:
           -DCMAKE_OSX_ARCHITECTURES=arm64 \
           -DCMAKE_C_COMPILER=/usr/bin/clang \
           -DCMAKE_CXX_COMPILER=/usr/bin/clang++ \
-          -DCMAKE_DISABLE_FIND_PACKAGE_ASM=TRUE
+          -DPNG_HARDWARE_OPTIMIZATIONS=OFF
 
     - name: Build (Windows/Linux)
       if: matrix.os != 'macOS'
